# breathe-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  breathe_config.py  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: python-app.yml
docs/: hooks.py  index.md  privacy-policy.md  terms-of-service.md  tts.ipynb
src/: breathe_config.py  command.py  main.py  play.py  voice.py
src/components/: duration_components.py
tests/: test_breathe_config.py  test_command.py  test_play.py  test_voice.py
tests/components/: test_duration_components.py
